Make subshell communication file unique for the current process, to make the thing reentrant, solving a probably race-condition.
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%408622

--- a/scripts/eupdate.in
+++ b/scripts/eupdate.in
@@ -53,7 +53,7 @@ EPACKAGE="`pwd -P`"; EPACKAGE=${EPACKAGE#*${PTREEDIR}/}
 [[ -z $DO_INDENT ]] || RC_INDENTATION=$DO_INDENT
 
 # file used for subshell communication (in /tmp, so swap on Solaris)
-gf=/tmp/eupdate.subshell
+gf=/tmp/eupdate.subshell.$$
 
 # returns the CVS revision number from the $Header
 get_cvsversion() {
