Avoid comparing non-ebuilds when looking for updates.  This reduces from 5.20 to 4.55 secs on an 800MHz PPC G3.
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%409537

--- a/scripts/eupdate.in
+++ b/scripts/eupdate.in
@@ -610,6 +610,11 @@ done
 # recent revision in the main tree
 last_pte=""
 for pte in $pt ; do
+	# skip over non-ebuilds
+	if [[ ${pte} != *.ebuild ]] ; then
+		pt=${pt/${pte}/}
+		continue
+	fi
 	for xpte in $pt ; do
 		[[ $(cmp_ebuild_ver $pte $xpte) -ge 10000 ]] \
 			&& pt=${pt/$xpte/}
@@ -644,6 +649,8 @@ done
 # the biggest of that
 last_mte=""
 for mte in $mt ; do
+	# skip over non-ebuilds
+	[[ ${mte} != *.ebuild ]] && continue
 	[[ $(cmp_ebuild_ver $mte $last_pte) > 0 ]] && \
 	[[ $(cmp_ebuild_ver $mte $last_mte) > 0 ]] \
 		&& last_mte=$mte
