Add changelog entry about the performance improvements
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%409599

--- a/scripts/eupdate.in
+++ b/scripts/eupdate.in
@@ -1,6 +1,10 @@
 #!/usr/bin/env bash
 # Copyright Gentoo Foundation 2006-2007
 
+# <grobian@gentoo.org> -- 2007-09-12
+# performance improvements by avoiding comparing ebuilds to non-ebuilds
+# when looking for updates, and by avoiding fork/execs for cut and echo
+# in the version comparator function
 # <grobian@gentoo.org> -- 2007-03-20
 # also update alpha, beta, pre, p, etc. instead of only revisions.
 # Basically everything which is on top of the 'base' version number
