sys-apps/gawk: fix install_name on darwin (for filefuncs) (Portage version: 2.2.00.8127-prefix/SVN/Darwin 8.10.1 i386)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4011339

--- a/sys-apps/gawk/files/filefuncs/Makefile
+++ b/sys-apps/gawk/files/filefuncs/Makefile
@@ -44,7 +44,7 @@ SHLIB = -shared
 SHLDFLAGS = -Wl,-G
 else
   ifeq ($(KERNEL),Darwin)
-SHLIB = -dynamiclib -undefined define_a_way
+SHLIB = -dynamiclib -undefined define_a_way -install_name $(LIBDIR)/rcscripts/$(TARGET_LIB)
 SHLDFLAGS = 
   else
 SHLIB = -shared
