Fix small cosmetic bug in reporting which file is no longer in the main tree
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4011344

--- a/scripts/eupdate.in
+++ b/scripts/eupdate.in
@@ -608,11 +608,10 @@ pt=`ls -p | egrep -v "^Manifest$"`
 # do a nested loop join, we don't assume any order
 for pte in $pt ; do
 	had_match=0
+	mypte=$pte
 	for mte in $mt ; do
 		# calculate the diffs between prefix and main
-		if [[ ${pte/-r0/-r} == $pte ]] ; then
-			mypte=$pte
-		else
+		if [[ ${pte} == *-r0* ]] ; then
 			# normalise version, so we compare against the original
 			# version from the main tree
 			mypte=${pte%.*.ebuild}.ebuild
