interrevision bump to fix a problem for Mac OS X users.  Bug #196292, fix typo and how the filefuncs object is built (Portage version: 2.2.00.8127-prefix/SVN/Darwin 8.10.0 powerpc)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4011499

--- a/sys-apps/gawk/files/filefuncs/Makefile
+++ b/sys-apps/gawk/files/filefuncs/Makefile
@@ -30,9 +30,9 @@ AWKINCDIR = $(S)
 endif
 
 ifeq ($(KERNEL),Darwin)
-TARGET_LIB = $(TARGET).$(MAJORVER).$(MINORVER).dylib
-TARGET_LIB_M = $(TARGET).$(MAJORVER).dylib
-TARGET_LIB_O = $(TARGET).dylib
+TARGET_LIB = $(TARGET).$(MAJORVER).$(MINORVER).bundle
+TARGET_LIB_M = $(TARGET).$(MAJORVER).bundle
+TARGET_LIB_O = $(TARGET).bundle
 else
 TARGET_LIB = $(TARGET).so.$(MAJORVER).$(MINORVER)
 TARGET_LIB_M = $(TARGET).so.$(MAJORVER)
@@ -44,7 +44,7 @@ SHLIB = -shared
 SHLDFLAGS = -Wl,-G
 else
   ifeq ($(KERNEL),Darwin)
-SHLIB = -dynamiclib -undefined define_a_way -install_name $(LIBDIR)/rcscripts/$(TARGET_LIB)
+SHLIB = -bundle -undefined define_a_way
 SHLDFLAGS = 
   else
 SHLIB = -shared
@@ -55,7 +55,7 @@ endif
 all: $(TARGET_LIB)
 
 $(TARGET).o: $(TARGET).c
-	$(CC) $(CLAGS) $(SHLIB) -Wall -DHAVE_CONFIG_H -c -O2 -fPIC -I$(AWKINCDIR) $^
+	$(CC) $(CFLAGS) $(SHLIB) -Wall -DHAVE_CONFIG_H -c -O2 -fPIC -I$(AWKINCDIR) $^
 
 $(TARGET_LIB): $(TARGET).o
 	$(LD) $(LDFLAGS) -o $@ $(SHLIB) $(SHLDFLAGS) $^
