Slightly change flags for Darwin, such that OSX 10.5 (Leopard) doesn't complain.  Thanks to pipping for figuring that out. (Portage version: 2.2.00.8321-prefix/SVN/Darwin 8.10.0 powerpc)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4011673

--- a/sys-apps/gawk/files/filefuncs/Makefile
+++ b/sys-apps/gawk/files/filefuncs/Makefile
@@ -44,7 +44,7 @@ SHLIB = -shared
 SHLDFLAGS = -Wl,-G
 else
   ifeq ($(KERNEL),Darwin)
-SHLIB = -bundle -undefined define_a_way
+SHLIB = -bundle -undefined dynamic_lookup
 SHLDFLAGS = 
   else
 SHLIB = -shared
